Creación de los repositorios y refactorización del modelo de datos Se crean las interfaces necesarias para la creación de repositorios locales y remotos y se simplifica el modelo de datos para que solo se utilicen los campos que son necesarios para mostrar en la interfaz.

--- a/AndroidApp/app/src/main/res/values/themes.xml
+++ b/AndroidApp/app/src/main/res/values/themes.xml
@@ -25,4 +25,13 @@
         <item name="fullscreenBackgroundColor">@color/light_blue_600</item>
         <item name="fullscreenTextColor">@color/light_blue_A200</item>
     </style>
+
+    <style name="Theme.MeliChallenge.NoActionBar">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+    </style>
+
+    <style name="Theme.MeliChallenge.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+
+    <style name="Theme.MeliChallenge.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 </resources>
