--- a/AndroidApp/app/src/main/res/layout/activity_product_detail.xml
+++ b/AndroidApp/app/src/main/res/layout/activity_product_detail.xml
@@ -4,6 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".presentation.productDetail.ProductDetailActivity">
+    tools:context=".presentation.product_detail.ProductDetailActivity">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
