--- a/AndroidApp/app/src/main/res/values/colors.xml
+++ b/AndroidApp/app/src/main/res/values/colors.xml
@@ -1,15 +1,73 @@
-<?xml version="1.0" encoding="utf-8"?>
+
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
-    <color name="light_blue_600">#FF039BE5</color>
-    <color name="light_blue_900">#FF01579B</color>
-    <color name="light_blue_A200">#FF40C4FF</color>
-    <color name="light_blue_A400">#FF00B0FF</color>
-    <color name="black_overlay">#66000000</color>
+    <color name="seed">#FFEB3B</color>
+    <!-- Custom colors -->
+    <color name="text_hint_color">#757575</color>
+    <color name="text_button_color">#1976D2</color>
+    <color name="best_seller_badge_background_color">#FF773D</color>
+    <color name="discount_badge_text_color">#0888E4</color>
+    <color name="discount_badge_background_color">#BAE2FF</color>
+    <color name="free_shipping_badge_text_color">#40B761</color>
+    <color name="rating_empty_star_color">#D9D9D9</color>
+    <color name="rating_full_star_color">#2294E5</color>
+
+    <!-- Theme colors -->
+    <color name="md_theme_light_primary">#FFEB3B</color>
+    <color name="md_theme_light_onPrimary">#1F1C00</color>
+    <color name="md_theme_light_primaryContainer">#FFEB3B</color>
+    <color name="md_theme_light_onPrimaryContainer">#1F1C00</color>
+    <color name="md_theme_light_secondary">#005DB8</color>
+    <color name="md_theme_light_onSecondary">#FFFFFF</color>
+    <color name="md_theme_light_secondaryContainer">#D6E3FF</color>
+    <color name="md_theme_light_onSecondaryContainer">#001B3E</color>
+    <color name="md_theme_light_tertiary">#994617</color>
+    <color name="md_theme_light_onTertiary">#FFFFFF</color>
+    <color name="md_theme_light_tertiaryContainer">#FFDBCC</color>
+    <color name="md_theme_light_onTertiaryContainer">#351000</color>
+    <color name="md_theme_light_error">#BA1A1A</color>
+    <color name="md_theme_light_errorContainer">#FFDAD6</color>
+    <color name="md_theme_light_onError">#FFFFFF</color>
+    <color name="md_theme_light_onErrorContainer">#410002</color>
+    <color name="md_theme_light_background">#F6FEFF</color>
+    <color name="md_theme_light_onBackground">#001F24</color>
+    <color name="md_theme_light_surface">#F6FEFF</color>
+    <color name="md_theme_light_onSurface">#001F24</color>
+    <color name="md_theme_light_surfaceVariant">#E8E2D0</color>
+    <color name="md_theme_light_onSurfaceVariant">#4A473A</color>
+    <color name="md_theme_light_outline">#7B7768</color>
+    <color name="md_theme_light_inverseOnSurface">#D0F8FF</color>
+    <color name="md_theme_light_inverseSurface">#00363D</color>
+    <color name="md_theme_light_inversePrimary">#FFEB3B</color>
+    <color name="md_theme_light_shadow">#000000</color>
+    <color name="md_theme_light_surfaceTint">#695F00</color>
+    <color name="md_theme_light_surfaceTintColor">#695F00</color>
+    <color name="md_theme_dark_primary">#FFEB3B</color>
+    <color name="md_theme_dark_onPrimary">#363100</color>
+    <color name="md_theme_dark_primaryContainer">#4F4800</color>
+    <color name="md_theme_dark_onPrimaryContainer">#FFEB3B</color>
+    <color name="md_theme_dark_secondary">#AAC7FF</color>
+    <color name="md_theme_dark_onSecondary">#002F64</color>
+    <color name="md_theme_dark_secondaryContainer">#00458D</color>
+    <color name="md_theme_dark_onSecondaryContainer">#D6E3FF</color>
+    <color name="md_theme_dark_tertiary">#FFB693</color>
+    <color name="md_theme_dark_onTertiary">#561F00</color>
+    <color name="md_theme_dark_tertiaryContainer">#7A2F00</color>
+    <color name="md_theme_dark_onTertiaryContainer">#FFDBCC</color>
+    <color name="md_theme_dark_error">#FFB4AB</color>
+    <color name="md_theme_dark_errorContainer">#93000A</color>
+    <color name="md_theme_dark_onError">#690005</color>
+    <color name="md_theme_dark_onErrorContainer">#FFDAD6</color>
+    <color name="md_theme_dark_background">#001F24</color>
+    <color name="md_theme_dark_onBackground">#97F0FF</color>
+    <color name="md_theme_dark_surface">#FFEB3B</color>
+    <color name="md_theme_dark_onSurface">#001F24</color>
+    <color name="md_theme_dark_surfaceVariant">#4A473A</color>
+    <color name="md_theme_dark_onSurfaceVariant">#CBC6B5</color>
+    <color name="md_theme_dark_outline">#959181</color>
+    <color name="md_theme_dark_inverseOnSurface">#001F24</color>
+    <color name="md_theme_dark_inverseSurface">#97F0FF</color>
+    <color name="md_theme_dark_inversePrimary">#695F00</color>
+    <color name="md_theme_dark_shadow">#000000</color>
+    <color name="md_theme_dark_surfaceTint">#FFEB3B</color>
+    <color name="md_theme_dark_surfaceTintColor">#FFEB3B</color>
 </resources>
