--- a/AndroidApp/app/src/main/res/layout/activity_main.xml
+++ b/AndroidApp/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     tools:context=".presentation.search_product.MainActivity">
 
     <TableLayout
-        android:id="@+id/tableLayout"
+        android:id="@+id/tl_activity_main_search_bar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
@@ -15,6 +15,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <TableRow
+            android:id="@+id/tr_activity_main_search_query"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/md_theme_dark_surface"
@@ -40,9 +41,12 @@
         </TableRow>
 
         <TableRow
+            android:id="@+id/tr_activity_main_search_results_bar"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:translationZ="5dp">
+            android:translationZ="5dp"
+            android:visibility="gone"
+            tools:visibility="visible">
 
             <TextView
                 android:id="@+id/lbl_activity_main_search_result_qty"
@@ -74,7 +78,7 @@
         android:background="?android:attr/listDivider"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tableLayout" />
+        app:layout_constraintTop_toBottomOf="@+id/tl_activity_main_search_bar" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_activity_main_search_results_list"
@@ -85,7 +89,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tableLayout"
+        app:layout_constraintTop_toBottomOf="@+id/tl_activity_main_search_bar"
         tools:itemCount="10"
         tools:listitem="@layout/fragment_search_results_item"
         tools:visibility="visible" />
@@ -101,7 +105,18 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tableLayout"
+        app:layout_constraintTop_toBottomOf="@+id/tl_activity_main_search_bar"
         tools:visibility="gone" />
+
+    <ProgressBar
+        android:id="@+id/pb_activity_main_loading"
+        style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Large"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
