--- a/AndroidApp/app/src/main/res/layout/fragment_search_results_item.xml
+++ b/AndroidApp/app/src/main/res/layout/fragment_search_results_item.xml
@@ -23,13 +23,13 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
+                android:text="@string/lbl_free_shipping_text"
                 android:textColor="@color/free_shipping_badge_text_color"
                 android:textSize="12sp"
                 android:visibility="gone"
                 app:layout_constraintStart_toStartOf="@+id/txt_frag_search_results_item_price"
                 app:layout_constraintTop_toBottomOf="@+id/txt_frag_search_results_item_price"
                 tools:ignore="TextContrastCheck"
-                tools:text="Envío gratis"
                 tools:visibility="visible" />
 
             <TextView
@@ -91,9 +91,11 @@
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="8dp"
                 android:background="@drawable/ic_favorite_background"
+                android:contentDescription="@string/img_favorite_item_content_desc"
                 app:layout_constraintEnd_toEndOf="@+id/img_frag_search_results_item_image"
                 app:layout_constraintTop_toTopOf="@+id/img_frag_search_results_item_image"
-                app:srcCompat="@drawable/ic_favorite_border_24" />
+                app:srcCompat="@drawable/ic_favorite_border_24"
+                tools:ignore="ImageContrastCheck" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
