--- a/AndroidApp/app/src/main/res/layout/fragment_filter_type_checkbox.xml
+++ b/AndroidApp/app/src/main/res/layout/fragment_filter_type_checkbox.xml
@@ -3,11 +3,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    tools:context=".presentation.ui.filters.types.StringFilterFragment">
+    android:layout_height="wrap_content">
 
     <androidx.cardview.widget.CardView
-        android:id="@+id/cv_fragment_filter_type_checkbox"
+        android:id="@+id/cv_frag_filter_type_checkbox"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
@@ -19,18 +18,18 @@
             android:layout_height="wrap_content">
 
             <TextView
-                android:id="@+id/lbl_fragment_type_checkbox_title"
+                android:id="@+id/lbl_frag_type_checkbox_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="8dp"
-                app:layout_constraintBottom_toTopOf="@+id/txt_fragment_type_checkbox_value"
+                app:layout_constraintBottom_toTopOf="@+id/txt_frag_type_checkbox_selected_values"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 tools:text="Condición" />
 
             <TextView
-                android:id="@+id/txt_fragment_type_checkbox_value"
+                android:id="@+id/txt_frag_type_checkbox_selected_values"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
@@ -39,15 +38,16 @@
                 android:textColor="@color/text_button_color"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/lbl_fragment_type_checkbox_title"
+                app:layout_constraintTop_toBottomOf="@+id/lbl_frag_type_checkbox_title"
                 tools:text="Nuevo" />
 
             <ImageView
-                android:id="@+id/img_fragment_type_checkbox_expand"
+                android:id="@+id/img_frag_type_checkbox_expand"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="16dp"
+                android:contentDescription="@string/img_expand_filter_content_desc"
                 android:src="@drawable/ic_outline_expand_more_24"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -55,14 +55,14 @@
     </androidx.cardview.widget.CardView>
 
     <LinearLayout
-        android:id="@+id/linear_layout_fragment_type_checkbox_available_values"
+        android:id="@+id/linear_layout_frag_type_checkbox_available_values"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/material_dynamic_neutral_variant95"
+        android:background="@color/filters_background_color"
         android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/cv_fragment_filter_type_checkbox">
+        app:layout_constraintTop_toBottomOf="@+id/cv_frag_filter_type_checkbox">
 
         <CheckBox
             android:id="@+id/checkBox3"
@@ -72,4 +72,14 @@
             android:checked="true"
             tools:text="Nuevo" />
     </LinearLayout>
+
+    <View
+        android:id="@+id/divider5"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="?android:attr/listDivider"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linear_layout_frag_type_checkbox_available_values" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
