--- a/AndroidApp/app/src/main/res/layout/fragment_search_results_item.xml
+++ b/AndroidApp/app/src/main/res/layout/fragment_search_results_item.xml
@@ -6,7 +6,7 @@
     android:layout_height="wrap_content">
 
     <androidx.cardview.widget.CardView
-        android:id="@+id/cardView"
+        android:id="@+id/cv_frag_search_results_item"
         android:layout_width="409dp"
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
@@ -107,6 +107,6 @@
         android:background="?android:attr/listDivider"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/cardView" />
+        app:layout_constraintTop_toBottomOf="@+id/cv_frag_search_results_item" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
